[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = ""
authors = ["Cory Gideon <cagideon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.5.0"
structlog = "^21.5.0"
colorama = "^0.4.4"
marshmallow = "^3.16.0"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
